parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.18.4 from parser.y
-----------------------------------------------------------------------------

state 3 contains 14 shift/reduce conflicts.
state 4 contains 2 shift/reduce conflicts.
state 15 contains 19 reduce/reduce conflicts.
state 34 contains 2 shift/reduce conflicts.
state 46 contains 3 shift/reduce conflicts.
state 48 contains 3 shift/reduce conflicts.
state 69 contains 3 shift/reduce conflicts.
state 70 contains 3 shift/reduce conflicts.
state 89 contains 3 shift/reduce conflicts.
state 110 contains 3 shift/reduce conflicts.
state 122 contains 3 shift/reduce conflicts and 1 reduce/reduce conflicts.
state 123 contains 3 shift/reduce conflicts and 1 reduce/reduce conflicts.
state 150 contains 3 shift/reduce conflicts and 1 reduce/reduce conflicts.
state 152 contains 3 shift/reduce conflicts and 1 reduce/reduce conflicts.
state 166 contains 14 shift/reduce conflicts.
state 168 contains 1 shift/reduce conflicts.

rule 8 is unused
rule 66 is unused
rule 67 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_maliceParser -> program                     (0)
	program -> stats                                   (1)
	stats ->                                           (2)
	stats -> stat stats                                (3)
	stat -> declare                                    (4)
	stat -> assign                                     (5)
	stat -> incdec                                     (6)
	stat -> print                                      (7)
	stat -> readin                                     (8)
	stat -> wnot                                       (9)
	stat -> function                                   (10)
	stat -> ifcond                                     (11)
	stat -> readin                                     (12)
	stat -> ignore                                     (13)
	stat -> lglass                                     (14)
	stat -> exp sep                                    (15)
	stat -> return                                     (16)
	literal -> string                                  (17)
	literal -> integer                                 (18)
	literal -> character                               (19)
	declare -> id was aa mtype sep                     (20)
	declare -> id had exp mtype sep                    (21)
	declare -> id had id mtype sep                     (22)
	assign -> id became exp sep                        (23)
	assign -> id cs exp piece became exp sep           (24)
	mtype -> tletter                                   (25)
	mtype -> tnumber                                   (26)
	mtype -> tsentence                                 (27)
	incdec -> id ate sep                               (28)
	incdec -> id drank sep                             (29)
	exp -> binoperation                                (30)
	exp -> unoperation                                 (31)
	exp -> literal                                     (32)
	exp -> id                                          (33)
	exp -> id cs exp piece                             (34)
	exp -> fcall                                       (35)
	exp -> lglasscall                                  (36)
	function -> theroom id obr params cbr contained aa mtype stats   (37)
	function -> theroom id obr params cbr contained aa mtype stats return   (38)
	return -> afound exp sep                           (39)
	fcall -> id obr callparams cbr                     (40)
	callparams -> exp sep callparams                   (41)
	callparams -> exp                                  (42)
	params -> mtype id sep params                      (43)
	params -> mtype id                                 (44)
	params -> spider mtype id sep params               (45)
	params -> spider mtype id                          (46)
	lglass -> lookglass id changed aa mtype stat       (47)
	lglasscall -> exp went through id                  (48)
	print -> id saida sep                              (49)
	print -> literal saida sep                         (50)
	print -> id spoke sep                              (51)
	print -> literal spoke sep                         (52)
	print -> exp spoke sep                             (53)
	print -> exp saida sep                             (54)
	readin -> what was id sep                          (55)
	readin -> what was id cs exp piece sep             (56)
	wnot -> eventual obr cond cbr because stats enought   (57)
	ifcond -> perhaps obr cond cbr so stats aunsure    (58)
	ifcond -> perhaps obr cond cbr so stats aunsurew   (59)
	ifcond -> perhaps obr cond cbr so stats elses aunsurew   (60)
	ifcond -> either obr cond cbr so stats elses aunsurew   (61)
	elses -> or stats                                  (62)
	elses -> or maybe obr cond cbr so stats            (63)
	elses -> or maybe obr cond cbr so stats elses      (64)
	cond -> exp                                        (65)
	cond -> exp dbin exp                               (66)
	cond -> exp bin exp                                (67)
	cond -> exp bin exp bin cond                       (68)
	cond -> exp dbin exp dbin cond                     (69)
	binoperation -> exp bin exp                        (70)
	binoperation -> exp dbin exp                       (71)
	binoperation -> obr exp bin exp cbr                (72)
	unoperation -> un exp                              (73)
	unoperation -> bin exp                             (74)
	ignore -> exp thoughta                             (75)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	integer        { LInt $$ }
	character      { LChar $$ }
	string         { LString $$ }
	afound         { AliceFound }
	aunsurew       { AliceUnsureW }
	aunsure        { AliceUnsure }
	thoughta       { ThoughtAlice }
	spoke          { Spoke }
	tnumber        { Number }
	tletter        { Letter }
	tsentence      { Sentence }
	aa             { Aa }
	became         { Became }
	drank          { Drank }
	ate            { Ate }
	theroom        { TheRoom }
	contained      { Contained }
	saida          { SaidAlice }
	perhaps        { Perhaps }
	had            { Had }
	enought        { EnoughTimes }
	eventual       { Eventually }
	obr            { OBracket }
	cbr            { CBracket }
	what           { What }
	was            { Was }
	piece          { Piece }
	cs             { ICommaS }
	so             { So }
	or             { Or }
	either         { Either }
	maybe          { Maybe }
	because        { Because }
	lookglass      { LookingGlass }
	changed        { Changed }
	went           { Went }
	through        { Through }
	spider         { Spider }
	bin            { BinOp $$ }
	dbin           { DBinOp $$ }
	un             { UnOp $$ }
	sep            { Separator }
	id             { Id $$ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_maliceParser rule  0
	program         rule  1
	stats           rules 2, 3
	stat            rules 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16
	literal         rules 17, 18, 19
	declare         rules 20, 21, 22
	assign          rules 23, 24
	mtype           rules 25, 26, 27
	incdec          rules 28, 29
	exp             rules 30, 31, 32, 33, 34, 35, 36
	function        rules 37, 38
	return          rule  39
	fcall           rule  40
	callparams      rules 41, 42
	params          rules 43, 44, 45, 46
	lglass          rule  47
	lglasscall      rule  48
	print           rules 49, 50, 51, 52, 53, 54
	readin          rules 55, 56
	wnot            rule  57
	ifcond          rules 58, 59, 60, 61
	elses           rules 62, 63, 64
	cond            rules 65, 66, 67, 68, 69
	binoperation    rules 70, 71, 72
	unoperation     rules 73, 74
	ignore          rule  75

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	integer        shift, and enter state 21
	character      shift, and enter state 22
	string         shift, and enter state 23
	afound         shift, and enter state 24
	theroom        shift, and enter state 25
	perhaps        shift, and enter state 26
	eventual       shift, and enter state 27
	obr            shift, and enter state 28
	what           shift, and enter state 29
	either         shift, and enter state 30
	lookglass      shift, and enter state 31
	bin            shift, and enter state 32
	un             shift, and enter state 33
	id             shift, and enter state 34
	%eof           reduce using rule 2

	program        goto state 35
	stats          goto state 2
	stat           goto state 3
	literal        goto state 4
	declare        goto state 5
	assign         goto state 6
	incdec         goto state 7
	exp            goto state 8
	function       goto state 9
	return         goto state 10
	fcall          goto state 11
	lglass         goto state 12
	lglasscall     goto state 13
	print          goto state 14
	readin         goto state 15
	wnot           goto state 16
	ifcond         goto state 17
	binoperation   goto state 18
	unoperation    goto state 19
	ignore         goto state 20

State 1


	integer        shift, and enter state 21
	character      shift, and enter state 22
	string         shift, and enter state 23
	afound         shift, and enter state 24
	theroom        shift, and enter state 25
	perhaps        shift, and enter state 26
	eventual       shift, and enter state 27
	obr            shift, and enter state 28
	what           shift, and enter state 29
	either         shift, and enter state 30
	lookglass      shift, and enter state 31
	bin            shift, and enter state 32
	un             shift, and enter state 33
	id             shift, and enter state 34

	stats          goto state 2
	stat           goto state 3
	literal        goto state 4
	declare        goto state 5
	assign         goto state 6
	incdec         goto state 7
	exp            goto state 8
	function       goto state 9
	return         goto state 10
	fcall          goto state 11
	lglass         goto state 12
	lglasscall     goto state 13
	print          goto state 14
	readin         goto state 15
	wnot           goto state 16
	ifcond         goto state 17
	binoperation   goto state 18
	unoperation    goto state 19
	ignore         goto state 20

State 2

	program -> stats .                                  (rule 1)

	%eof           reduce using rule 1


State 3

	stats -> stat . stats                               (rule 3)

	integer        shift, and enter state 21
			(reduce using rule 2)

	character      shift, and enter state 22
			(reduce using rule 2)

	string         shift, and enter state 23
			(reduce using rule 2)

	afound         shift, and enter state 24
			(reduce using rule 2)

	aunsurew       reduce using rule 2
	aunsure        reduce using rule 2
	theroom        shift, and enter state 25
			(reduce using rule 2)

	perhaps        shift, and enter state 26
			(reduce using rule 2)

	enought        reduce using rule 2
	eventual       shift, and enter state 27
			(reduce using rule 2)

	obr            shift, and enter state 28
			(reduce using rule 2)

	what           shift, and enter state 29
			(reduce using rule 2)

	or             reduce using rule 2
	either         shift, and enter state 30
			(reduce using rule 2)

	lookglass      shift, and enter state 31
			(reduce using rule 2)

	bin            shift, and enter state 32
			(reduce using rule 2)

	un             shift, and enter state 33
			(reduce using rule 2)

	id             shift, and enter state 34
			(reduce using rule 2)

	%eof           reduce using rule 2

	stats          goto state 66
	stat           goto state 3
	literal        goto state 4
	declare        goto state 5
	assign         goto state 6
	incdec         goto state 7
	exp            goto state 8
	function       goto state 9
	return         goto state 10
	fcall          goto state 11
	lglass         goto state 12
	lglasscall     goto state 13
	print          goto state 14
	readin         goto state 15
	wnot           goto state 16
	ifcond         goto state 17
	binoperation   goto state 18
	unoperation    goto state 19
	ignore         goto state 20

State 4

	exp -> literal .                                    (rule 32)
	print -> literal . saida sep                        (rule 50)
	print -> literal . spoke sep                        (rule 52)

	thoughta       reduce using rule 32
	spoke          shift, and enter state 64
			(reduce using rule 32)

	saida          shift, and enter state 65
			(reduce using rule 32)

	went           reduce using rule 32
	bin            reduce using rule 32
	dbin           reduce using rule 32
	sep            reduce using rule 32


State 5

	stat -> declare .                                   (rule 4)

	integer        reduce using rule 4
	character      reduce using rule 4
	string         reduce using rule 4
	afound         reduce using rule 4
	aunsurew       reduce using rule 4
	aunsure        reduce using rule 4
	theroom        reduce using rule 4
	perhaps        reduce using rule 4
	enought        reduce using rule 4
	eventual       reduce using rule 4
	obr            reduce using rule 4
	what           reduce using rule 4
	or             reduce using rule 4
	either         reduce using rule 4
	lookglass      reduce using rule 4
	bin            reduce using rule 4
	un             reduce using rule 4
	id             reduce using rule 4
	%eof           reduce using rule 4


State 6

	stat -> assign .                                    (rule 5)

	integer        reduce using rule 5
	character      reduce using rule 5
	string         reduce using rule 5
	afound         reduce using rule 5
	aunsurew       reduce using rule 5
	aunsure        reduce using rule 5
	theroom        reduce using rule 5
	perhaps        reduce using rule 5
	enought        reduce using rule 5
	eventual       reduce using rule 5
	obr            reduce using rule 5
	what           reduce using rule 5
	or             reduce using rule 5
	either         reduce using rule 5
	lookglass      reduce using rule 5
	bin            reduce using rule 5
	un             reduce using rule 5
	id             reduce using rule 5
	%eof           reduce using rule 5


State 7

	stat -> incdec .                                    (rule 6)

	integer        reduce using rule 6
	character      reduce using rule 6
	string         reduce using rule 6
	afound         reduce using rule 6
	aunsurew       reduce using rule 6
	aunsure        reduce using rule 6
	theroom        reduce using rule 6
	perhaps        reduce using rule 6
	enought        reduce using rule 6
	eventual       reduce using rule 6
	obr            reduce using rule 6
	what           reduce using rule 6
	or             reduce using rule 6
	either         reduce using rule 6
	lookglass      reduce using rule 6
	bin            reduce using rule 6
	un             reduce using rule 6
	id             reduce using rule 6
	%eof           reduce using rule 6


State 8

	stat -> exp . sep                                   (rule 15)
	lglasscall -> exp . went through id                 (rule 48)
	print -> exp . spoke sep                            (rule 53)
	print -> exp . saida sep                            (rule 54)
	binoperation -> exp . bin exp                       (rule 70)
	binoperation -> exp . dbin exp                      (rule 71)
	ignore -> exp . thoughta                            (rule 75)

	thoughta       shift, and enter state 57
	spoke          shift, and enter state 58
	saida          shift, and enter state 59
	went           shift, and enter state 60
	bin            shift, and enter state 61
	dbin           shift, and enter state 62
	sep            shift, and enter state 63


State 9

	stat -> function .                                  (rule 10)

	integer        reduce using rule 10
	character      reduce using rule 10
	string         reduce using rule 10
	afound         reduce using rule 10
	aunsurew       reduce using rule 10
	aunsure        reduce using rule 10
	theroom        reduce using rule 10
	perhaps        reduce using rule 10
	enought        reduce using rule 10
	eventual       reduce using rule 10
	obr            reduce using rule 10
	what           reduce using rule 10
	or             reduce using rule 10
	either         reduce using rule 10
	lookglass      reduce using rule 10
	bin            reduce using rule 10
	un             reduce using rule 10
	id             reduce using rule 10
	%eof           reduce using rule 10


State 10

	stat -> return .                                    (rule 16)

	integer        reduce using rule 16
	character      reduce using rule 16
	string         reduce using rule 16
	afound         reduce using rule 16
	aunsurew       reduce using rule 16
	aunsure        reduce using rule 16
	theroom        reduce using rule 16
	perhaps        reduce using rule 16
	enought        reduce using rule 16
	eventual       reduce using rule 16
	obr            reduce using rule 16
	what           reduce using rule 16
	or             reduce using rule 16
	either         reduce using rule 16
	lookglass      reduce using rule 16
	bin            reduce using rule 16
	un             reduce using rule 16
	id             reduce using rule 16
	%eof           reduce using rule 16


State 11

	exp -> fcall .                                      (rule 35)

	thoughta       reduce using rule 35
	spoke          reduce using rule 35
	tnumber        reduce using rule 35
	tletter        reduce using rule 35
	tsentence      reduce using rule 35
	saida          reduce using rule 35
	cbr            reduce using rule 35
	piece          reduce using rule 35
	went           reduce using rule 35
	bin            reduce using rule 35
	dbin           reduce using rule 35
	sep            reduce using rule 35


State 12

	stat -> lglass .                                    (rule 14)

	integer        reduce using rule 14
	character      reduce using rule 14
	string         reduce using rule 14
	afound         reduce using rule 14
	aunsurew       reduce using rule 14
	aunsure        reduce using rule 14
	theroom        reduce using rule 14
	perhaps        reduce using rule 14
	enought        reduce using rule 14
	eventual       reduce using rule 14
	obr            reduce using rule 14
	what           reduce using rule 14
	or             reduce using rule 14
	either         reduce using rule 14
	lookglass      reduce using rule 14
	bin            reduce using rule 14
	un             reduce using rule 14
	id             reduce using rule 14
	%eof           reduce using rule 14


State 13

	exp -> lglasscall .                                 (rule 36)

	thoughta       reduce using rule 36
	spoke          reduce using rule 36
	tnumber        reduce using rule 36
	tletter        reduce using rule 36
	tsentence      reduce using rule 36
	saida          reduce using rule 36
	cbr            reduce using rule 36
	piece          reduce using rule 36
	went           reduce using rule 36
	bin            reduce using rule 36
	dbin           reduce using rule 36
	sep            reduce using rule 36


State 14

	stat -> print .                                     (rule 7)

	integer        reduce using rule 7
	character      reduce using rule 7
	string         reduce using rule 7
	afound         reduce using rule 7
	aunsurew       reduce using rule 7
	aunsure        reduce using rule 7
	theroom        reduce using rule 7
	perhaps        reduce using rule 7
	enought        reduce using rule 7
	eventual       reduce using rule 7
	obr            reduce using rule 7
	what           reduce using rule 7
	or             reduce using rule 7
	either         reduce using rule 7
	lookglass      reduce using rule 7
	bin            reduce using rule 7
	un             reduce using rule 7
	id             reduce using rule 7
	%eof           reduce using rule 7


State 15

	stat -> readin .                                    (rule 8)
	stat -> readin .                                    (rule 12)

	integer        reduce using rule 12
			(reduce using rule 8)

	character      reduce using rule 12
			(reduce using rule 8)

	string         reduce using rule 12
			(reduce using rule 8)

	afound         reduce using rule 12
			(reduce using rule 8)

	aunsurew       reduce using rule 12
			(reduce using rule 8)

	aunsure        reduce using rule 12
			(reduce using rule 8)

	theroom        reduce using rule 12
			(reduce using rule 8)

	perhaps        reduce using rule 12
			(reduce using rule 8)

	enought        reduce using rule 12
			(reduce using rule 8)

	eventual       reduce using rule 12
			(reduce using rule 8)

	obr            reduce using rule 12
			(reduce using rule 8)

	what           reduce using rule 12
			(reduce using rule 8)

	or             reduce using rule 12
			(reduce using rule 8)

	either         reduce using rule 12
			(reduce using rule 8)

	lookglass      reduce using rule 12
			(reduce using rule 8)

	bin            reduce using rule 12
			(reduce using rule 8)

	un             reduce using rule 12
			(reduce using rule 8)

	id             reduce using rule 12
			(reduce using rule 8)

	%eof           reduce using rule 12
			(reduce using rule 8)



State 16

	stat -> wnot .                                      (rule 9)

	integer        reduce using rule 9
	character      reduce using rule 9
	string         reduce using rule 9
	afound         reduce using rule 9
	aunsurew       reduce using rule 9
	aunsure        reduce using rule 9
	theroom        reduce using rule 9
	perhaps        reduce using rule 9
	enought        reduce using rule 9
	eventual       reduce using rule 9
	obr            reduce using rule 9
	what           reduce using rule 9
	or             reduce using rule 9
	either         reduce using rule 9
	lookglass      reduce using rule 9
	bin            reduce using rule 9
	un             reduce using rule 9
	id             reduce using rule 9
	%eof           reduce using rule 9


State 17

	stat -> ifcond .                                    (rule 11)

	integer        reduce using rule 11
	character      reduce using rule 11
	string         reduce using rule 11
	afound         reduce using rule 11
	aunsurew       reduce using rule 11
	aunsure        reduce using rule 11
	theroom        reduce using rule 11
	perhaps        reduce using rule 11
	enought        reduce using rule 11
	eventual       reduce using rule 11
	obr            reduce using rule 11
	what           reduce using rule 11
	or             reduce using rule 11
	either         reduce using rule 11
	lookglass      reduce using rule 11
	bin            reduce using rule 11
	un             reduce using rule 11
	id             reduce using rule 11
	%eof           reduce using rule 11


State 18

	exp -> binoperation .                               (rule 30)

	thoughta       reduce using rule 30
	spoke          reduce using rule 30
	tnumber        reduce using rule 30
	tletter        reduce using rule 30
	tsentence      reduce using rule 30
	saida          reduce using rule 30
	cbr            reduce using rule 30
	piece          reduce using rule 30
	went           reduce using rule 30
	bin            reduce using rule 30
	dbin           reduce using rule 30
	sep            reduce using rule 30


State 19

	exp -> unoperation .                                (rule 31)

	thoughta       reduce using rule 31
	spoke          reduce using rule 31
	tnumber        reduce using rule 31
	tletter        reduce using rule 31
	tsentence      reduce using rule 31
	saida          reduce using rule 31
	cbr            reduce using rule 31
	piece          reduce using rule 31
	went           reduce using rule 31
	bin            reduce using rule 31
	dbin           reduce using rule 31
	sep            reduce using rule 31


State 20

	stat -> ignore .                                    (rule 13)

	integer        reduce using rule 13
	character      reduce using rule 13
	string         reduce using rule 13
	afound         reduce using rule 13
	aunsurew       reduce using rule 13
	aunsure        reduce using rule 13
	theroom        reduce using rule 13
	perhaps        reduce using rule 13
	enought        reduce using rule 13
	eventual       reduce using rule 13
	obr            reduce using rule 13
	what           reduce using rule 13
	or             reduce using rule 13
	either         reduce using rule 13
	lookglass      reduce using rule 13
	bin            reduce using rule 13
	un             reduce using rule 13
	id             reduce using rule 13
	%eof           reduce using rule 13


State 21

	literal -> integer .                                (rule 18)

	thoughta       reduce using rule 18
	spoke          reduce using rule 18
	tnumber        reduce using rule 18
	tletter        reduce using rule 18
	tsentence      reduce using rule 18
	saida          reduce using rule 18
	cbr            reduce using rule 18
	piece          reduce using rule 18
	went           reduce using rule 18
	bin            reduce using rule 18
	dbin           reduce using rule 18
	sep            reduce using rule 18


State 22

	literal -> character .                              (rule 19)

	thoughta       reduce using rule 19
	spoke          reduce using rule 19
	tnumber        reduce using rule 19
	tletter        reduce using rule 19
	tsentence      reduce using rule 19
	saida          reduce using rule 19
	cbr            reduce using rule 19
	piece          reduce using rule 19
	went           reduce using rule 19
	bin            reduce using rule 19
	dbin           reduce using rule 19
	sep            reduce using rule 19


State 23

	literal -> string .                                 (rule 17)

	thoughta       reduce using rule 17
	spoke          reduce using rule 17
	tnumber        reduce using rule 17
	tletter        reduce using rule 17
	tsentence      reduce using rule 17
	saida          reduce using rule 17
	cbr            reduce using rule 17
	piece          reduce using rule 17
	went           reduce using rule 17
	bin            reduce using rule 17
	dbin           reduce using rule 17
	sep            reduce using rule 17


State 24

	return -> afound . exp sep                          (rule 39)

	integer        shift, and enter state 21
	character      shift, and enter state 22
	string         shift, and enter state 23
	obr            shift, and enter state 28
	bin            shift, and enter state 32
	un             shift, and enter state 33
	id             shift, and enter state 47

	literal        goto state 45
	exp            goto state 56
	fcall          goto state 11
	lglasscall     goto state 13
	binoperation   goto state 18
	unoperation    goto state 19

State 25

	function -> theroom . id obr params cbr contained aa mtype stats    (rule 37)
	function -> theroom . id obr params cbr contained aa mtype stats return    (rule 38)

	id             shift, and enter state 55


State 26

	ifcond -> perhaps . obr cond cbr so stats aunsure    (rule 58)
	ifcond -> perhaps . obr cond cbr so stats aunsurew    (rule 59)
	ifcond -> perhaps . obr cond cbr so stats elses aunsurew    (rule 60)

	obr            shift, and enter state 54


State 27

	wnot -> eventual . obr cond cbr because stats enought    (rule 57)

	obr            shift, and enter state 53


State 28

	binoperation -> obr . exp bin exp cbr               (rule 72)

	integer        shift, and enter state 21
	character      shift, and enter state 22
	string         shift, and enter state 23
	obr            shift, and enter state 28
	bin            shift, and enter state 32
	un             shift, and enter state 33
	id             shift, and enter state 47

	literal        goto state 45
	exp            goto state 52
	fcall          goto state 11
	lglasscall     goto state 13
	binoperation   goto state 18
	unoperation    goto state 19

State 29

	readin -> what . was id sep                         (rule 55)
	readin -> what . was id cs exp piece sep            (rule 56)

	was            shift, and enter state 51


State 30

	ifcond -> either . obr cond cbr so stats elses aunsurew    (rule 61)

	obr            shift, and enter state 50


State 31

	lglass -> lookglass . id changed aa mtype stat      (rule 47)

	id             shift, and enter state 49


State 32

	unoperation -> bin . exp                            (rule 74)

	integer        shift, and enter state 21
	character      shift, and enter state 22
	string         shift, and enter state 23
	obr            shift, and enter state 28
	bin            shift, and enter state 32
	un             shift, and enter state 33
	id             shift, and enter state 47

	literal        goto state 45
	exp            goto state 48
	fcall          goto state 11
	lglasscall     goto state 13
	binoperation   goto state 18
	unoperation    goto state 19

State 33

	unoperation -> un . exp                             (rule 73)

	integer        shift, and enter state 21
	character      shift, and enter state 22
	string         shift, and enter state 23
	obr            shift, and enter state 28
	bin            shift, and enter state 32
	un             shift, and enter state 33
	id             shift, and enter state 47

	literal        goto state 45
	exp            goto state 46
	fcall          goto state 11
	lglasscall     goto state 13
	binoperation   goto state 18
	unoperation    goto state 19

State 34

	declare -> id . was aa mtype sep                    (rule 20)
	declare -> id . had exp mtype sep                   (rule 21)
	declare -> id . had id mtype sep                    (rule 22)
	assign -> id . became exp sep                       (rule 23)
	assign -> id . cs exp piece became exp sep          (rule 24)
	incdec -> id . ate sep                              (rule 28)
	incdec -> id . drank sep                            (rule 29)
	exp -> id .                                         (rule 33)
	exp -> id . cs exp piece                            (rule 34)
	fcall -> id . obr callparams cbr                    (rule 40)
	print -> id . saida sep                             (rule 49)
	print -> id . spoke sep                             (rule 51)

	thoughta       reduce using rule 33
	spoke          shift, and enter state 36
			(reduce using rule 33)

	became         shift, and enter state 37
	drank          shift, and enter state 38
	ate            shift, and enter state 39
	saida          shift, and enter state 40
			(reduce using rule 33)

	had            shift, and enter state 41
	obr            shift, and enter state 42
	was            shift, and enter state 43
	cs             shift, and enter state 44
	went           reduce using rule 33
	bin            reduce using rule 33
	dbin           reduce using rule 33
	sep            reduce using rule 33


State 35

	%start_maliceParser -> program .                    (rule 0)

	%eof           accept


State 36

	print -> id spoke . sep                             (rule 51)

	sep            shift, and enter state 94


State 37

	assign -> id became . exp sep                       (rule 23)

	integer        shift, and enter state 21
	character      shift, and enter state 22
	string         shift, and enter state 23
	obr            shift, and enter state 28
	bin            shift, and enter state 32
	un             shift, and enter state 33
	id             shift, and enter state 47

	literal        goto state 45
	exp            goto state 93
	fcall          goto state 11
	lglasscall     goto state 13
	binoperation   goto state 18
	unoperation    goto state 19

State 38

	incdec -> id drank . sep                            (rule 29)

	sep            shift, and enter state 92


State 39

	incdec -> id ate . sep                              (rule 28)

	sep            shift, and enter state 91


State 40

	print -> id saida . sep                             (rule 49)

	sep            shift, and enter state 90


State 41

	declare -> id had . exp mtype sep                   (rule 21)
	declare -> id had . id mtype sep                    (rule 22)

	integer        shift, and enter state 21
	character      shift, and enter state 22
	string         shift, and enter state 23
	obr            shift, and enter state 28
	bin            shift, and enter state 32
	un             shift, and enter state 33
	id             shift, and enter state 89

	literal        goto state 45
	exp            goto state 88
	fcall          goto state 11
	lglasscall     goto state 13
	binoperation   goto state 18
	unoperation    goto state 19

State 42

	fcall -> id obr . callparams cbr                    (rule 40)

	integer        shift, and enter state 21
	character      shift, and enter state 22
	string         shift, and enter state 23
	obr            shift, and enter state 28
	bin            shift, and enter state 32
	un             shift, and enter state 33
	id             shift, and enter state 47

	literal        goto state 45
	exp            goto state 86
	fcall          goto state 11
	callparams     goto state 87
	lglasscall     goto state 13
	binoperation   goto state 18
	unoperation    goto state 19

State 43
